# semsynth

./: .gitignore  AGENTS.md  LICENSE  README.md  plan.md  prov-config.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: advanced_config.yaml
docs/: api.html  backends.html  downstream-fidelity.html  genindex.html  getting-started.html  index.html  map_columns.html  missingness.html  objects.inv  privacy-metrics.html  provenance.html  py-modindex.html  schema.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  getting-started.doctree  index.doctree  map_columns.doctree  provenance.doctree  schema.doctree
docs/_autosummary/: semsynth.backends.base.html  semsynth.backends.html  semsynth.backends.missingness.html  semsynth.cli.html  semsynth.datasets.html  semsynth.downstream_fidelity.html  semsynth.html  semsynth.jsonld_to_rdfa.html  semsynth.mappings.html  semsynth.metadata.html  semsynth.metrics.html  semsynth.missingness.html  semsynth.privacy_metrics.html  semsynth.semmap.html  semsynth.specs.html  semsynth.torch_compat.html  semsynth.umap_utils.html  semsynth.utils.html
docs/_sources/: getting-started.md.txt  index.md.txt  provenance.md.txt  schema.md.txt
map_columns/: README.md  __init__.py  build_wikidata_medical_codes_table.py  codes.tsv  codes_map_columns.py  embed_map_columns.py  evaluate.py  extract_wikidata_medical_codes_table.py  kwd_map_columns.py  llm_map_columns.py  shared.py  sssom_to_semmap.py  wikidata-codes-untracked-backup.tsv
map_columns/manual/: uciml-145.json
mappings/: uciml-145.sssom.tsv  uciml-244.metadata.json  uciml-891.metadata.json
output/: build_catalog.json  catalog.json  catalog.jsonld  index.html  search.json  search.tsv
output/Autistic Spectrum Disorder Screening Data for Children  /: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/CDC Diabetes Health Indicators/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/Chronic Kidney Disease/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/Diabetes 130-US Hospitals for Years 1999-2008/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/Fertility/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/Heart Disease/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/Hepatitis/: dataset.semmap.html  dataset.semmap.json  index.html  prov.json  report.md
output/Statlog (Heart)/: dataset.semmap.html  dataset.semmap.json  index.html  report.md
output/sparql/: query-semmap-and-provenance-artifacts.rq  query-semmap-coverage.rq
prov/: build_catalog.json  generate_synthetic_umaps.json  load_dataset.json  load_openml_by_name.json  load_uciml_by_id.json  preprocess.json  run_models.json  write_downstream.json  write_privacy.json  write_report.json
semsynth/: __main__.py  app.py  catalog.py  cli.py  context.jsonld  datasets.py  downstream_fidelity.py  jsonld_to_rdfa.py  mappings.py  metadata.py  missingness.py  models.py  pipeline.py  privacy_metrics.py  reporting.py  reports_index.py  runtime.py  semmap.py  torch_compat.py  utils.py
semsynth/backends/: synthcity.py
semsynth/dataproviders/: _helpers.py  openml.py  uciml.py
semsynth/mapping_data/: __init__.py  uciml-1150.metadata.json  uciml-145.metadata.json  uciml-296.metadata.json  uciml-336.metadata.json  uciml-419.metadata.json  uciml-45.metadata.json  uciml-46.metadata.json
semsynth/templates/: query-provenance-artifacts.rq  report.md.j2  report_style.css  report_template.html  semmap_style.css
sphinx/: backends.md  downstream-fidelity.md  getting-started.md  index.md  map_columns.md  missingness.md  privacy-metrics.md  provenance.md  schema.md
sphinx/_autosummary/: semsynth.backends.rst  semsynth.metadata.rst  semsynth.rst  (+1 more)
templates/: report.md.j2
tests/: test_catalog_index.py  test_catalog_sparql_queries.py  test_imports.py  test_metadata.py  test_missingness_model.py  test_pipeline_components.py  test_pipeline_flags.py  test_privacy_metadata_roles.py  test_sparql_playwright.py
(+248 files in other folders)
