[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semsynth"
version = "0.1.0"
description = "Synthetic data profiling and reporting for OpenML and UCI datasets."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SemSynth Authors" }
]
keywords = ["synthetic-data", "data-profiling", "metadata", "uci"]
dependencies = [
  "defopt",
  "flask",
  "markdown",
  "jinja2",
  "numpy<2",
  "openml",
  "pandas<3",
  "pint-pandas",
  "makeprov==0.4.2",
  "pyarrow",
  "tabulate",
  "pyyaml",
  "requests",
  "scikit-learn",
  "ucimlrepo"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy"
]
app = [
  "flask"
]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-rtd-theme",
  "statsmodels",
  "linkify-it-py",
]
metasyn = [
  "metasyn"
]
pybnesian = [
  "graphviz",
  "networkx",
  "pybnesian"
]
synthcity = [
  "synthcity>=0.2",
  "torch"
]
umap = [
  "matplotlib",
  "umap-learn"
]
statsmodels = [
  "statsmodels"
]
mapping = [
  "requests",
  "defopt",
  "datasette",
  "sqlite-utils",
  "sssom"
]
all = [
  "metasyn",
  "statsmodels",
  "graphviz",
  "networkx",
  "pybnesian",
  "synthcity>=0.2",
  "torch",
  "matplotlib",
  "umap-learn",
  "ucumvert"
]

[project.scripts]
semsynth = "semsynth.__main__:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["semsynth*", "map_columns*"]

[tool.setuptools.package-data]
semsynth = ["templates/*.j2", "templates/*.html", "templates/*.css", "templates/*.rq", "mapping_data/*.json", "*.jsonld"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

